Update Stat table

--- a/public/lib/custom.css
+++ b/public/lib/custom.css
@@ -27,6 +27,7 @@
 	.fullh{height: 100%}
 	.fullw{width: 100%}
 	.w95{width: 95%}
+	.w97{width: 97%}
 	.progressHeight{height: 8px}
 
 	.width80{width: 80%}
