Update Subsidebar - Add Main Search bar and collapse statistic panel
- Adding main search bar and filter rule to operate it
- Collapse statistic panel on small screen, click to expand it. also resolve resize problem
- Collapse it also when searching in main search bar
- Expand piechart on small screen

--- a/public/lib/custom.css
+++ b/public/lib/custom.css
@@ -13,6 +13,7 @@
 	.pLR7px{padding: 2px 2px 2px 7px}
 
 	.m0px{margin: 0}
+	.mT10p{margin-top: 10px}
 
 	.txOnImg{text-shadow: 1px 1px #000;}
 	.txBold{font-weight: bold;}
