--- a/public/lib/custom.css
+++ b/public/lib/custom.css
@@ -3,6 +3,7 @@
 	.hidden{display: none;}
 	.unseen{visibility: hidden;}
 	.divider{background-color: #282d2f; height: 1px}
+	.ptr{cursor: pointer;}
 
 	.pad10p{padding: 10px}
 	.bot12p{padding-bottom: 12px}
@@ -14,6 +15,7 @@
 
 	.m0px{margin: 0}
 	.mT10p{margin-top: 10px}
+	.mb4p{margin-bottom: 4px}
 
 	.txOnImg{text-shadow: 1px 1px #000;}
 	.txBold{font-weight: bold;}
