Bổ sung Drive API cho chức năng upload file
- Bổ sung giao diện upload file cho index.html
- Bổ sung Drive scope cho firebaseScript.js
- Viết hàm request API cho googleDriveScript.js
- Viết hàm ghi nhận sự kiện upload file cho uploadFile-js.js
- Bổ sung chức năng kiểm tra khi token Drive hết hạn sẽ yêu cầu người dùng đăng nhập lại

--- a/public/lib/custom.css
+++ b/public/lib/custom.css
@@ -16,6 +16,7 @@
 	.m0px{margin: 0}
 	.mT10p{margin-top: 10px}
 	.mb4p{margin-bottom: 4px}
+	.m5p{margin: 5px}
 
 	.txOnImg{text-shadow: 1px 1px #000;}
 	.txBold{font-weight: bold;}
@@ -44,6 +45,10 @@
 	.overYAuto{overflow-y: auto;}
 	.lv4{z-index:4}
 	label{font-size: 12px}
+
+	.fadeUnder{opacity: 50%;position: relative;}
+	.fadeAbove{top:0;left:0;position: absolute;}
+	.fadeContainer{position: relative;}
 /*=======================================*/
 
 /*description="circle"*/
